fix scrollbar ios safar bug

--- a/app/styles/global-styles.css
+++ b/app/styles/global-styles.css
@@ -5,7 +5,7 @@
 html,
 body,
 #__next {
-    @apply p-0 m-0 min-w-full w-full min-h-screen max-w-full overflow-hidden;
+    @apply p-0 m-0 min-w-full w-full min-h-screen max-w-full sm:overflow-hidden;
 }
 
 #__next {
